[gd_scene load_steps=15 format=3 uid="uid://2jarj8vtfcng"]

[ext_resource type="PackedScene" uid="uid://bv1ul1qynrdwd" path="res://gameStage/GameBoard/Cursor/Cursor.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://d4mhjq651egt" path="res://gameStage/Units/Unit.tscn" id="2"]
[ext_resource type="Script" path="res://gameStage/GameBoard/GameBoard.gd" id="3"]
[ext_resource type="Resource" uid="uid://dos77avjw27es" path="res://gameStage/GameBoard/Grid.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://n825j345khoi" path="res://gameStage/UnitOverlay/UnitOverlay.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://dxyfefsgkgc4l" path="res://gameStage/GameBoard/UnitPath.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://ceanoo0yxcj8i" path="res://gameStage/Units/squirrel.png" id="7"]
[ext_resource type="Texture2D" uid="uid://don6rhlapjhye" path="res://gameStage/Units/bear.png" id="8"]
[ext_resource type="Texture2D" uid="uid://x4kxxdinjx3r" path="res://gameStage/Units/bugcat.png" id="9"]
[ext_resource type="Texture2D" uid="uid://d0jfyksf1qm0v" path="res://gameStage/Units/Aurel-Sprite.png" id="9_1cexo"]
[ext_resource type="PackedScene" uid="uid://de53ukdqyusan" path="res://gameStage/Background/Map.tscn" id="10"]

[sub_resource type="Curve2D" id="1"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="2"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="3"]
resource_local_to_scene = true

[node name="Main" type="Node2D"]

[node name="Map" parent="." instance=ExtResource("10")]
visible = false
layer_0/tile_data = PackedInt32Array(-65538, 786434, 1, -65537, 786434, 1, -131072, 786434, 1, -131071, 786434, 1, -131070, 786434, 1, -131069, 786434, 1, -131068, 786434, 1, -131067, 786434, 1, -131066, 786434, 1, -131065, 786434, 1, -131064, 786434, 1, -131063, 786434, 1, -131062, 786434, 1, -131061, 786434, 1, -131060, 786434, 1, -131059, 786434, 1, -131058, 786434, 1, -131057, 786434, 1, -131056, 786434, 1, -131055, 786434, 1, -2, 786434, 1, -1, 786434, 1, -65536, 786434, 1, -65535, 786434, 1, -65534, 786434, 1, -65533, 786434, 1, -65532, 786434, 1, -65531, 786434, 1, -65530, 786434, 1, -65529, 786434, 1, -65528, 786434, 1, -65527, 786434, 1, -65526, 786434, 1, -65525, 786434, 1, -65524, 786434, 1, -65523, 786434, 1, -65522, 786434, 1, -65521, 786434, 1, -65520, 786434, 1, -65519, 786434, 1, 65534, 786434, 1, 65535, 786434, 1, 16, 786434, 1, 17, 786434, 1, 131070, 786434, 1, 131071, 786434, 1, 65552, 786434, 1, 65553, 786434, 1, 196606, 786434, 1, 196607, 786434, 1, 131088, 786434, 1, 131089, 786434, 1, 262142, 786434, 1, 262143, 786434, 1, 196624, 786434, 1, 196625, 786434, 1, 327678, 786434, 1, 327679, 786434, 1, 262160, 786434, 1, 262161, 786434, 1, 393214, 786434, 1, 393215, 786434, 1, 327696, 786434, 1, 327697, 786434, 1, 458750, 786434, 1, 458751, 786434, 1, 393232, 786434, 1, 393233, 786434, 1, 524286, 786434, 1, 524287, 786434, 1, 458768, 786434, 1, 458769, 786434, 1, 589822, 786434, 1, 589823, 786434, 1, 524304, 786434, 1, 524305, 786434, 1, 655358, 786434, 1, 655359, 786434, 1, 589824, 786434, 1, 589825, 786434, 1, 589826, 786434, 2, 589827, 786434, 2, 589828, 786434, 2, 589829, 786434, 2, 589830, 786434, 1, 589831, 786434, 1, 589832, 786434, 1, 589833, 786434, 1, 589834, 786434, 1, 589835, 786434, 1, 589836, 786434, 1, 589837, 786434, 1, 589838, 786434, 1, 589839, 786434, 1, 589840, 786434, 1, 589841, 786434, 1, 720894, 786434, 1, 720895, 786434, 1, 655360, 786434, 1, 655361, 786434, 1, 655362, 786434, 1, 655363, 786434, 1, 655364, 786434, 1, 655365, 786434, 1, 655366, 786434, 1, 655367, 786434, 1, 655368, 786434, 1, 655369, 786434, 1, 655370, 786434, 1, 655371, 786434, 1, 655372, 786434, 1, 655373, 786434, 1, 655374, 786434, 1, 655375, 786434, 1, 655376, 786434, 1, 655377, 786434, 1, 0, 786434, 1, 1, 786434, 1, 2, 786434, 1, 3, 786434, 1, 4, 786434, 1, 5, 786434, 1, 6, 786434, 1, 7, 786434, 1, 8, 786434, 1, 9, 786434, 1, 10, 786434, 1, 11, 786434, 1, 12, 786434, 1, 13, 786434, 1, 14, 786434, 1, 15, 786434, 1, 65551, 786434, 1, 65550, 786434, 1, 65549, 786434, 1, 65548, 786434, 1, 65547, 786434, 1, 65546, 786434, 1, 65545, 786434, 1, 65544, 786434, 1, 65543, 786434, 1, 65542, 786434, 1, 65541, 786434, 1, 65540, 786434, 1, 131075, 786434, 1, 131074, 786434, 1, 131073, 786434, 1, 131072, 786434, 1, 65536, 786434, 1, 65537, 786434, 1, 65538, 786434, 1, 65539, 786434, 1, 131076, 786434, 1, 131077, 786434, 1, 131078, 786434, 1, 131079, 786434, 1, 131080, 786434, 1, 131081, 786434, 1, 131082, 786434, 1, 131083, 786434, 1, 131084, 786434, 1, 131085, 786434, 1, 131086, 786434, 1, 131087, 786434, 1, 196623, 786434, 1, 196622, 786434, 1, 196621, 786434, 1, 196620, 786434, 1, 196619, 786434, 1, 196618, 786434, 1, 196617, 786434, 1, 196616, 786434, 1, 196615, 786434, 1, 196614, 786434, 1, 196613, 786434, 1, 196612, 786434, 1, 196611, 786434, 1, 196610, 786434, 2, 196609, 786434, 1, 196608, 786434, 1, 262144, 786434, 1, 262145, 786434, 2, 262146, 786434, 2, 262147, 786434, 2, 262148, 786434, 2, 262149, 786434, 2, 262150, 786434, 2, 262151, 786434, 1, 262152, 786434, 1, 262153, 786434, 1, 262154, 786434, 1, 262155, 786434, 1, 262156, 786434, 1, 262157, 786434, 1, 262158, 786434, 1, 262159, 786434, 1, 327695, 786434, 1, 327694, 786434, 1, 327693, 786434, 1, 327692, 786434, 1, 327691, 786434, 1, 327690, 786434, 1, 327689, 786434, 1, 327688, 786434, 1, 327687, 786434, 2, 327686, 786434, 2, 327685, 786434, 2, 327684, 786434, 2, 327683, 786434, 2, 327682, 786434, 2, 327681, 786434, 2, 327680, 786434, 1, 393216, 786434, 1, 393217, 786434, 2, 393218, 786434, 2, 393219, 786434, 2, 393220, 786434, 2, 393221, 786434, 2, 393222, 786434, 2, 393223, 786434, 2, 393224, 786434, 1, 393225, 786434, 1, 393226, 786434, 1, 393227, 786434, 1, 393228, 786434, 1, 393229, 786434, 1, 393230, 786434, 1, 393231, 786434, 1, 458766, 786434, 1, 458765, 786434, 1, 458764, 786434, 1, 458763, 786434, 1, 458762, 786434, 1, 458761, 786434, 1, 458760, 786434, 2, 458759, 786434, 2, 458758, 786434, 2, 458757, 786434, 2, 458756, 786434, 2, 458755, 786434, 2, 458752, 786434, 1, 458753, 786434, 2, 458754, 786434, 2, 458767, 786434, 1, 524303, 786434, 1, 524302, 786434, 1, 524301, 786434, 1, 524300, 786434, 1, 524299, 786434, 1, 524290, 786434, 2, 524289, 786434, 2, 524288, 786434, 1, 524291, 786434, 2, 524292, 786434, 2, 524293, 786434, 2, 524294, 786434, 1, 524295, 786434, 1, 524296, 786434, 1, 524297, 786434, 1, 524298, 786434, 1)

[node name="Desert" parent="." instance=ExtResource("10")]
layer_0/tile_data = PackedInt32Array(-65538, 65538, 1, -65537, 131074, 1, -131072, 196610, 1, -131071, 262146, 1, -131070, 65538, 1, -131069, 131074, 1, -131068, 196610, 1, -131067, 262146, 1, -131066, 65538, 1, -131065, 131074, 1, -131064, 196610, 1, -131063, 262146, 1, -131062, 65538, 1, -131061, 131074, 1, -131060, 196610, 1, -131059, 262146, 1, -131058, 65538, 1, -131057, 131074, 1, -131056, 196610, 1, -131055, 262146, 1, -2, 65538, 2, -1, 131074, 2, -65536, 196610, 2, -65535, 262146, 2, -65534, 65538, 2, -65533, 131074, 2, -65532, 196610, 2, -65531, 262146, 2, -65530, 65538, 2, -65529, 131074, 2, -65528, 196610, 2, -65527, 262146, 2, -65526, 65538, 2, -65525, 131074, 2, -65524, 196610, 2, -65523, 262146, 2, -65522, 65538, 2, -65521, 131074, 2, -65520, 196610, 2, -65519, 262146, 2, 65534, 65538, 3, 65535, 131074, 3, 16, 196610, 3, 17, 262146, 3, 131070, 65538, 4, 131071, 131074, 4, 65552, 196610, 4, 65553, 262146, 4, 196606, 65538, 1, 196607, 131074, 1, 131088, 196610, 1, 131089, 262146, 1, 262142, 65538, 2, 262143, 131074, 2, 196624, 196610, 2, 196625, 262146, 2, 327678, 65538, 3, 327679, 131074, 3, 262160, 196610, 3, 262161, 262146, 3, 393214, 65538, 4, 393215, 131074, 4, 327696, 196610, 4, 327697, 262146, 4, 458750, 65538, 1, 458751, 131074, 1, 393232, 196610, 1, 393233, 262146, 1, 524286, 65538, 2, 524287, 131074, 2, 458768, 196610, 2, 458769, 262146, 2, 589822, 65538, 3, 589823, 131074, 3, 524304, 196610, 3, 524305, 262146, 3, 655358, 65538, 4, 655359, 131074, 4, 589824, 196610, 4, 589825, 262146, 4, 589826, 65538, 4, 589827, 131074, 4, 589828, 196610, 4, 589829, 262146, 4, 589830, 65538, 4, 589831, 131074, 4, 589832, 196610, 4, 589833, 262146, 4, 589834, 65538, 4, 589835, 131074, 4, 589836, 196610, 4, 589837, 262146, 4, 589838, 65538, 4, 589839, 131074, 4, 589840, 196610, 4, 589841, 262146, 4, 720894, 65538, 1, 720895, 131074, 1, 655360, 65538, 1, 655361, 131074, 1, 655362, 65538, 1, 655363, 131074, 1, 655364, 65538, 1, 655365, 131074, 1, 655366, 65538, 1, 655367, 131074, 1, 655368, 65538, 1, 655369, 131074, 1, 655370, 65538, 1, 655371, 131074, 1, 655372, 65538, 1, 655373, 131074, 1, 655374, 65538, 1, 655375, 131074, 1, 655376, 65538, 1, 655377, 131074, 1, 0, 196610, 3, 1, 262146, 3, 2, 65538, 3, 3, 131074, 3, 4, 196610, 3, 5, 262146, 3, 6, 65538, 3, 7, 131074, 3, 8, 196610, 3, 9, 262146, 3, 10, 65538, 3, 11, 131074, 3, 12, 196610, 3, 13, 262146, 3, 14, 65538, 3, 15, 131074, 3, 65551, 131074, 4, 65550, 65538, 4, 65549, 262146, 4, 65548, 196610, 4, 65547, 131074, 4, 65546, 65538, 4, 65545, 262146, 4, 65544, 196610, 4, 65543, 131074, 4, 65542, 65538, 4, 65541, 262146, 4, 65540, 196610, 4, 131075, 131074, 1, 131074, 65538, 1, 131073, 262146, 1, 131072, 196610, 1, 65536, 196610, 4, 65537, 262146, 4, 65538, 65538, 4, 65539, 131074, 4, 131076, 196610, 1, 131077, 262146, 1, 131078, 65538, 1, 131079, 131074, 1, 131080, 196610, 1, 131081, 262146, 1, 131082, 65538, 1, 131083, 131074, 1, 131084, 196610, 1, 131085, 262146, 1, 131086, 65538, 1, 131087, 131074, 1, 196623, 131074, 2, 196622, 65538, 2, 196621, 262146, 2, 196620, 196610, 2, 196619, 131074, 2, 196618, 65538, 2, 196617, 262146, 2, 196616, 196610, 2, 196615, 131074, 2, 196614, 65538, 2, 196613, 262146, 2, 196612, 196610, 2, 196611, 131074, 2, 196610, 65538, 2, 196609, 262146, 2, 196608, 196610, 2, 262144, 196610, 3, 262145, 262146, 3, 262146, 65538, 3, 262147, 131074, 3, 262148, 196610, 3, 262149, 262146, 3, 262150, 65538, 3, 262151, 131074, 3, 262152, 196610, 3, 262153, 262146, 3, 262154, 65538, 3, 262155, 131074, 3, 262156, 196610, 3, 262157, 262146, 3, 262158, 65538, 3, 262159, 131074, 3, 327695, 131074, 4, 327694, 65538, 4, 327693, 262146, 4, 327692, 196610, 4, 327691, 131074, 4, 327690, 65538, 4, 327689, 262146, 4, 327688, 196610, 4, 327687, 131074, 4, 327686, 65538, 4, 327685, 262146, 4, 327684, 196610, 4, 327683, 131074, 4, 327682, 65538, 4, 327681, 262146, 4, 327680, 196610, 4, 393216, 196610, 1, 393217, 262146, 1, 393218, 65538, 1, 393219, 131074, 1, 393220, 196610, 1, 393221, 262146, 1, 393222, 65538, 1, 393223, 131074, 1, 393224, 196610, 1, 393225, 262146, 1, 393226, 65538, 1, 393227, 131074, 1, 393228, 196610, 1, 393229, 262146, 1, 393230, 65538, 1, 393231, 131074, 1, 458766, 65538, 2, 458765, 262146, 2, 458764, 196610, 2, 458763, 131074, 2, 458762, 65538, 2, 458761, 262146, 2, 458760, 196610, 2, 458759, 131074, 2, 458758, 65538, 2, 458757, 262146, 2, 458756, 196610, 2, 458755, 131074, 2, 458752, 196610, 2, 458753, 262146, 2, 458754, 65538, 2, 458767, 131074, 2, 524303, 131074, 3, 524302, 65538, 3, 524301, 262146, 3, 524300, 196610, 3, 524299, 131074, 3, 524290, 65538, 3, 524289, 262146, 3, 524288, 196610, 3, 524291, 131074, 3, 524292, 196610, 3, 524293, 262146, 3, 524294, 65538, 3, 524295, 131074, 3, 524296, 196610, 3, 524297, 262146, 3, 524298, 65538, 3)

[node name="Snow" parent="." instance=ExtResource("10")]
visible = false
layer_0/tile_data = PackedInt32Array(-65538, 65538, 9, -65537, 131074, 9, -131072, 196610, 9, -131071, 262146, 9, -131070, 65538, 9, -131069, 131074, 9, -131068, 196610, 9, -131067, 262146, 9, -131066, 65538, 9, -131065, 131074, 9, -131064, 196610, 9, -131063, 262146, 9, -131062, 196610, 9, -131061, 262146, 9, -131060, 65538, 9, -131059, 131074, 9, -131058, 196610, 9, -131057, 262146, 9, -131056, 196610, 9, -131055, 262146, 9, -2, 65538, 10, -1, 131074, 10, -65536, 196610, 10, -65535, 262146, 10, -65534, 65538, 10, -65533, 131074, 10, -65532, 196610, 10, -65531, 262146, 10, -65530, 65538, 10, -65529, 131074, 10, -65528, 196610, 10, -65527, 262146, 10, -65526, 196610, 10, -65525, 262146, 10, -65524, 65538, 10, -65523, 131074, 10, -65522, 196610, 10, -65521, 262146, 10, -65520, 196610, 10, -65519, 262146, 10, 65534, 65538, 11, 65535, 131074, 11, 16, 196610, 9, 17, 262146, 9, 131070, 65538, 12, 131071, 131074, 12, 65552, 196610, 10, 65553, 262146, 10, 196606, 65538, 9, 196607, 131074, 9, 131088, 196610, 9, 131089, 262146, 9, 262142, 65538, 10, 262143, 131074, 10, 196624, 196610, 10, 196625, 262146, 10, 327678, 65538, 11, 327679, 131074, 11, 262160, 196610, 9, 262161, 262146, 9, 393214, 65538, 12, 393215, 131074, 12, 327696, 196610, 10, 327697, 262146, 10, 458750, 65538, 9, 458751, 131074, 9, 393232, 196610, 9, 393233, 262146, 9, 524286, 65538, 10, 524287, 131074, 10, 458768, 196610, 10, 458769, 262146, 10, 589822, 65538, 11, 589823, 131074, 11, 524304, 196610, 11, 524305, 262146, 11, 655358, 65538, 12, 655359, 131074, 12, 589824, 196610, 12, 589825, 262146, 12, 589826, 65538, 12, 589827, 131074, 12, 589828, 196610, 12, 589829, 262146, 12, 589830, 65538, 12, 589831, 131074, 12, 589832, 196610, 12, 589833, 262146, 12, 589834, 65538, 12, 589835, 131074, 12, 589836, 196610, 12, 589837, 262146, 12, 589838, 65538, 12, 589839, 131074, 12, 589840, 196610, 12, 589841, 262146, 12, 720894, 196610, 9, 720895, 262146, 9, 655360, 196610, 9, 655361, 262146, 9, 655362, 196610, 9, 655363, 262146, 9, 655364, 196610, 9, 655365, 262146, 9, 655366, 196610, 9, 655367, 262146, 9, 655368, 196610, 9, 655369, 262146, 9, 655370, 196610, 9, 655371, 262146, 9, 655372, 196610, 9, 655373, 262146, 9, 655374, 196610, 9, 655375, 262146, 9, 655376, 196610, 9, 655377, 262146, 9, 0, 196610, 11, 1, 262146, 11, 2, 65538, 11, 3, 131074, 11, 4, 196610, 11, 5, 262146, 11, 6, 65538, 11, 7, 131074, 11, 8, 196610, 11, 9, 262146, 11, 10, 196610, 11, 11, 262146, 11, 12, 65538, 11, 13, 131074, 11, 14, 196610, 11, 15, 262146, 11, 65551, 262146, 12, 65550, 196610, 12, 65549, 131074, 12, 65548, 65538, 12, 65547, 262146, 12, 65546, 196610, 12, 65545, 262146, 12, 65544, 196610, 12, 65543, 131074, 12, 65542, 65538, 12, 65541, 262146, 12, 65540, 196610, 12, 131075, 262146, 9, 131074, 196610, 9, 131073, 262146, 9, 131072, 196610, 9, 65536, 196610, 12, 65537, 262146, 12, 65538, 65538, 12, 65539, 131074, 12, 131076, 65538, 9, 131077, 131074, 9, 131078, 196610, 9, 131079, 262146, 9, 131080, 65538, 9, 131081, 131074, 9, 131082, 196610, 9, 131083, 262146, 9, 131084, 65538, 9, 131085, 131074, 9, 131086, 196610, 9, 131087, 262146, 9, 196623, 262146, 10, 196622, 196610, 10, 196621, 131074, 10, 196620, 65538, 10, 196619, 262146, 10, 196618, 196610, 10, 196617, 131074, 10, 196616, 65538, 10, 196615, 262146, 10, 196614, 196610, 10, 196613, 131074, 10, 196612, 65538, 10, 196611, 262146, 10, 196610, 196610, 10, 196609, 262146, 10, 196608, 196610, 10, 262144, 196610, 11, 262145, 262146, 11, 262146, 196610, 11, 262147, 262146, 11, 262148, 65538, 11, 262149, 131074, 11, 262150, 196610, 11, 262151, 262146, 11, 262152, 65538, 11, 262153, 131074, 11, 262154, 196610, 11, 262155, 262146, 11, 262156, 65538, 11, 262157, 131074, 11, 262158, 196610, 11, 262159, 262146, 11, 327695, 262146, 12, 327694, 196610, 12, 327693, 131074, 12, 327692, 65538, 12, 327691, 262146, 12, 327690, 196610, 12, 327689, 131074, 12, 327688, 65538, 12, 327687, 262146, 12, 327686, 196610, 12, 327685, 131074, 12, 327684, 65538, 12, 327683, 262146, 12, 327682, 196610, 12, 327681, 262146, 12, 327680, 196610, 12, 393216, 196610, 9, 393217, 262146, 9, 393218, 65538, 9, 393219, 131074, 9, 393220, 196610, 9, 393221, 262146, 9, 393222, 65538, 9, 393223, 131074, 9, 393224, 196610, 9, 393225, 262146, 9, 393226, 65538, 9, 393227, 131074, 9, 393228, 196610, 9, 393229, 262146, 9, 393230, 65538, 9, 393231, 131074, 9, 458766, 65538, 10, 458765, 262146, 10, 458764, 196610, 10, 458763, 131074, 10, 458762, 65538, 10, 458761, 262146, 10, 458760, 196610, 10, 458759, 131074, 10, 458758, 65538, 10, 458757, 262146, 10, 458756, 196610, 10, 458755, 131074, 10, 458752, 196610, 10, 458753, 262146, 10, 458754, 65538, 10, 458767, 131074, 10, 524303, 131074, 11, 524302, 65538, 11, 524301, 262146, 11, 524300, 196610, 11, 524299, 131074, 11, 524290, 65538, 11, 524289, 262146, 11, 524288, 196610, 11, 524291, 131074, 11, 524292, 196610, 11, 524293, 262146, 11, 524294, 65538, 11, 524295, 131074, 11, 524296, 196610, 11, 524297, 262146, 11, 524298, 65538, 11)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -8.0
offset_top = -2.0
offset_right = 298.0
offset_bottom = 135.0
color = Color(0.929412, 0.490196, 0.192157, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
offset_left = -8.0
offset_top = 134.0
offset_right = 298.0
offset_bottom = 653.0
color = Color(0.309804, 0.290196, 0.270588, 1)

[node name="GameBoard" type="Node2D" parent="."]
z_index = 2
script = ExtResource("3")
grid = ExtResource("4")

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource("5")]

[node name="UnitPath" parent="GameBoard" instance=ExtResource("6")]

[node name="Cursor" parent="GameBoard" instance=ExtResource("1")]

[node name="Bear" parent="GameBoard" instance=ExtResource("2")]
position = Vector2(744, 560)
curve = SubResource("1")
move_range = 3
skin = ExtResource("8")
skin_offset = Vector2(2, 9)

[node name="Aurel" parent="GameBoard" instance=ExtResource("2")]
position = Vector2(165, 470)
scale = Vector2(0.5, 0.35)
curve = SubResource("1")
move_range = 3
skin = ExtResource("9_1cexo")
skin_offset = Vector2(-8, -20)

[node name="Cat" parent="GameBoard" instance=ExtResource("2")]
visible = false
position = Vector2(850.293, 412.465)
curve = SubResource("2")
move_range = 8
skin = ExtResource("9")
skin_offset = Vector2(5, 12)

[node name="Squirrel" parent="GameBoard" instance=ExtResource("2")]
visible = false
position = Vector2(744, 216)
curve = SubResource("3")
move_range = 5
skin = ExtResource("7")
skin_offset = Vector2(6, 17)

[node name="TurnCounter" type="RichTextLabel" parent="GameBoard"]
custom_minimum_size = Vector2(334, 211)
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 4
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true

[node name="EndTurn" type="Button" parent="."]
offset_left = 993.0
offset_top = 576.0
offset_right = 1137.0
offset_bottom = 632.0
text = "End Turn"

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_moved"]
[connection signal="pressed" from="EndTurn" to="GameBoard" method="_on_end_turn_pressed"]
